# dbmail

./: .dockerignore  .gitignore  .travis.yml  AUTHORS  BUGS  CHANGELOG.md  COPYING  ChangeLog  Dockerfile  EXTRAS  INSTALL  INSTALL.exim  INSTALL.postfix  INSTALL.qmail  Makefile  Makefile.am  Makefile.concept  Makefile.in  Makefile.mysql  Makefile.pgsql  Makefile.tmpl  NEWS  README  README.aliases  README.exim  README.ldap  README.md  README.postfix  README.qmail  README.sieve  README.smtp  README.solaris  README.usermap  THANKS  TODO  UPGRADING  VERSION  acconfig.h  acinclude.m4  acl.c  (+182 more)
.github/workflows/: ccpp.yml
auth/: Makefile.am  Makefile.in  authldap.c  authsql.c
buildtools/: Makefile.am  configure  configure.in
contrib/: Dockerfile.alpine  build-deb-with-docker.sh  dbmail-removeversion.patch  dbmail.spec  dbmail.supp  dbmailclient.php  exim-dbmail-configure  expirebox.sh  expiretrash.sh  make-centos7.sh  quota_warn.pl  testdbmailclient.php
contrib/autosubscribe/: autosubscribe.sql
contrib/build-centos-rpm/: dbmail.spec  libsieve.spec  libzdb.spec
contrib/build-rpm/: DBMail_RPM_Build_Guide.odt  RPM_README  dbmail.spec  libsieve.spec
debian/: .gitignore  README.Debian  README.ldap  README.source  TODO  changelog  control  copyright  create-dbmail-conf.sh  create-defaults.sh  create-sqlite-db.sh  dbmail-dev.files  dbmail-dev.install  dbmail-ldap.config  dbmail-ldap.docs  dbmail-ldap.examples  dbmail-ldap.install  dbmail-ldap.postinst  dbmail-ldap.templates  dbmail-mysql-ldap.examples  dbmail-mysql.config  dbmail-mysql.examples  dbmail-mysql.files  dbmail-mysql.install  dbmail-mysql.postinst  dbmail-mysql.templates  dbmail-pgsql-ldap.examples  dbmail-pgsql.config  dbmail-pgsql.examples  dbmail-pgsql.files  dbmail-pgsql.install  dbmail-pgsql.postinst  dbmail-pgsql.templates  dbmail-sieve.config  dbmail-sieve.docs  dbmail-sieve.files  dbmail-sieve.install  dbmail-sieve.lintian-override  dbmail-sieve.manpages  dbmail-sieve.postinst  (+49 more)
debian/po/: cs.po  (+17 more)
doc/: README.aliases  README.exim  README.filters  README.http  README.postfix  README.qmail  README.security-password  README.sieve  README.solaris
docker/: Dockerfile  Dockerfile-amd64-debianbookworm-350  Dockerfile-amd64-debianbookworm-devel  Dockerfile-amd64-fedora-devel  Dockerfile-amd64-ubuntu-350  Dockerfile-amd64-ubuntu-devel  Dockerfile-amd64-ubuntu2204-350  Dockerfile-amd64-ubuntu2404-350  Dockerfile.alpine  README.md  compose.yaml
jenkins/: Makefile  buildout.cfg
lib/: Makefile.am  Makefile.in
man/: Makefile.am  Makefile.in  commonopts.txt  dbmail-adduser.1  dbmail-config.1  dbmail-deliver.1  dbmail-deliver.txt  dbmail-export.8  dbmail-export.txt  dbmail-httpd.8  dbmail-httpd.txt  dbmail-imapd.1  dbmail-imapd.8  dbmail-imapd.txt  dbmail-lmtpd.1  dbmail-lmtpd.8  dbmail-lmtpd.txt  dbmail-maintenance.1  dbmail-pop3d.1  dbmail-pop3d.8  dbmail-pop3d.txt  dbmail-sievecmd.8  dbmail-sievecmd.txt  dbmail-sieved.txt  dbmail-smtp.1  dbmail-smtp.txt  dbmail-timsieved.8  dbmail-timsieved.txt  dbmail-users.1  dbmail-users.8  dbmail-users.txt  dbmail-util.1  dbmail-util.8  dbmail-util.txt  dbmail.1  dbmail.conf.5  dbmail.conf.txt  dbmail.txt  fixsp.pl  footer.txt  (+1 more)
modules/: .dbsqlite.c.swp  Makefile.am  Makefile.in  authldap.c  authsql.c  dbingres.c  dbmysql.c  dbpgsql.c  dbsqlite.c  sortnull.c  sortsieve.c  sortsieve.h
mysql/: Makefile.am  Makefile.in  dbauthmysql.c  dbmsgbufmysql.c  dbmysql.c  dbmysql.tmpl  dbsearchmysql.c
mysql2pgsql/: HOW-TO-CONVERT  copyfrommysql.sql  copytopgsql.sql  pgsql-convert.sh
pgsql/: Makefile.am  Makefile.in  dbauthpgsql.c  dbmsgbufpgsql.c  dbpgsql.c  dbsearchpgsql.c
sort/: Makefile.am  Makefile.in  sort.c  sortsieve.c  sortsieve.h
sql/: create_tables.dev.sql  create_tables.mysql  create_tables.sql  migrate_singe_user.py  migration_1_x_to_2_0alpha.py  pop_before_smtp.sql  update_mailbox_subscribed_folders.mysql  update_ownerid_aliases.mysql  update_ownerid_aliases.sql
sqlite/: Makefile.am  dbsqlite.c
src/: Makefile.am  Makefile.in  auth.h  authmodule.c  authmodule.h  clientbase.c  clientbase.h  clientsession.c  clientsession.h  dbmail-imapsession.c  dbmail-imapsession.h  dbmail-mailbox.c  dbmail-mailbox.h  dbmail-message.c  dbmail-message.h  dbmail-user.c  dbmail-user.h  dbmail.h.in  dbmailtypes.h  dbmodule.c  dbmodule.h  dm_acl.c  dm_acl.h  dm_base64.h  dm_cache.c  dm_cache.h  dm_capa.c  dm_capa.h  dm_cidr.c  dm_cidr.h  dm_config.c  dm_config.h  dm_cram.c  dm_cram.h  dm_db.c  dm_db.h  dm_debug.c  dm_debug.h  dm_digest.c  dm_digest.h  (+79 more)
src/modules/: Makefile.am  Makefile.in  authldap.c  authsql.c  dbingres.c  dbmysql.c  dbpgsql.c  dbsqlite.c  sortnull.c  sortsieve.c
src/mpool/: mpool.c
systemd/: Makefile.am  Makefile.in  dbmail-imapd.service.in  dbmail-lmtpd.service.in  dbmail-pop3d.service.in  dbmail-sieved.service.in  dbmail-timsieved.service.in  dbmail.tmpfiles.in
test/: Makefile.am  Makefile.in  README.md  check_dbmail.h  check_dbmail_auth.c  check_dbmail_cache.c  check_dbmail_capa.c  check_dbmail_common.c  check_dbmail_connection_pool.c  check_dbmail_connection_pool_crash.c  check_dbmail_db.c  check_dbmail_deliver.c  check_dbmail_dsn.c  check_dbmail_imapd.c  check_dbmail_list.c  check_dbmail_mailbox.c  check_dbmail_mailboxstate.c  check_dbmail_memblock.c  check_dbmail_mempool.c  check_dbmail_message.c  check_dbmail_misc.c  check_dbmail_server.c  check_dbmail_sset.c  check_dbmail_stream.c  check_dbmail_string.c  check_dbmail_user.c  check_dbmail_util.c  check_dbmail_util_empty_envelope.c
test-scripts/: 7bitmime.lmtp  8bitmime.lmtp  README.md  check.sh  cleanlog.sh  compare.py  dumpbt.sh  imap_long.py  imapbench.py  lmtp2.txt  lmtp3.txt  loadimap.py  loadpop.py  smtputf8.lmtp  testappend.imap  testappend.txt  testauthenticate.imap  testautoreply.txt  testbox  testcondstore.txt  testexpunge.imap  testextensions.rb  testfetch.imap  testfetch.txt  testhttp.php  testhttp.sh  testidle.imap  testimap.php  testimap.py  testimap.sh  testlist.imap  testlist.txt  testlmtp.py  testlmtp.sh  testlmtp.txt  testlmtp2.txt  testpop.py  testpop.txt  testsearch.imap  testsieve.txt  (+4 more)
(+195 files in other folders)
