# Copyright (C) 1999-2004 IC & S  dbmail@ic-s.nl
# Copyright (C) 2004-2008 NFG Net Facilities Group support@nfg.nl

AC_INIT([dbmail], [dbmail@dbmail.org])
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h:config.in)

# ---------------------------------------------
DM_MSG_CONFIGURE_START
DM_SET_VERSION
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE
AC_DEFINE(_GNU_SOURCE,'','Defined GNU SOURCE')

# ---------------------------------------------
# shared or static
# ---------------------------------------------
AM_ENABLE_SHARED(no)
AM_ENABLE_STATIC(no)
DM_SET_SHARED_OR_STATIC
AM_CONDITIONAL(SHARED, [ test "$enable_shared" = "yes" ])
AM_CONDITIONAL(STATIC, [ test "$enable_static" = "yes" ])

# ---------------------------------------------
DM_DEFINES
DM_SQL_CHECK
DM_SQL_LIBS
DM_LDAP_CONF
DM_SIEVE_CONF
DM_CHECK_GLIB
DM_CHECK_GMIME
DM_CHECK_MHASH
DM_CHECK_EVENT
DM_PATH_CHECK
gl_GETOPT
CMU_SOCKETS

AM_CONDITIONAL(USE_DM_GETOPT, [test -n "$USE_DM_GETOPT"])
AM_CONDITIONAL(WITHCHECK, [test -n "$CHECK_LIBS"])
AM_CONDITIONAL(MANPAGES, [ test "$enable_manpages" = "yes" ])

AC_PROG_CC
AC_COMPILE_WARNINGS
AC_C_CONST
AC_C_INLINE
AM_CONDITIONAL(MYSQL, [test -n "$MYSQLLIB"])
AM_CONDITIONAL(PGSQL, [test -n "$PGSQLLIB"])
AM_CONDITIONAL(SQLITE, [test -n "$SQLITELIB"])
AM_CONDITIONAL(INGRES, [test -n "$INGRESLIB"])
AM_CONDITIONAL(SIEVE, [test -n "$SIEVELIB"])
AM_CONDITIONAL(LDAP, [test -n "$LDAPLIB"])
AC_C_BIGENDIAN
AC_CHECK_HEADERS(endian.h)
AC_CHECK_HEADERS(crypt.h)
AC_CHECK_LIB(crypt, crypt, [ CRYPTLIB="-lcrypt" ])

AC_SUBST(CRYPTLIB)

AC_SUBST(MYSQLLIB)
AC_SUBST(MYSQLALIB)
AC_SUBST(MYSQLLTLIB)

AC_SUBST(PGSQLLIB)
AC_SUBST(PGSQLALIB)
AC_SUBST(PGSQLLTLIB)

AC_SUBST(SQLITELIB)
AC_SUBST(SQLITELALIB)
AC_SUBST(SQLITELTLIB)
AC_SUBST(SQLITECREATE)

AC_SUBST(INGRESLIB)
AC_SUBST(INGRESLALIB)
AC_SUBST(INGRESLTLIB)

AC_SUBST(SIEVEINC)
AC_SUBST(SIEVELIB)
AC_SUBST(SORTALIB)
AC_SUBST(SORTLTLIB)

AC_SUBST(AUTHALIB)
AC_SUBST(AUTHLTLIB)

AC_SUBST(MYSQLINC)
AC_SUBST(PGSQLINC)
AC_SUBST(SQLITEINC)
AC_SUBST(INGRESINC)

AC_SUBST(LDAPLIB)
AC_SUBST(LDAPINC)

AC_SUBST(SOCKETLIB)

AC_SUBST(DM_LOGDIR)
AC_SUBST(DM_CONFDIR)
AC_SUBST(DM_STATEDIR)
AC_SUBST(DM_PKGLIBDIR)

AC_PROG_LIBTOOL

AC_OUTPUT(src/dbmail.h Makefile src/Makefile src/modules/Makefile man/Makefile test/Makefile)

DM_MSG_CONFIGURE_RESULTS
